--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "swagger-codegen"
-version = "0.1.3"
+version = "0.1.4"
 description = "Generate API clients by parsing Swagger definitions"
 authors = ["asyncee"]
 license = "MIT"
@@ -24,6 +24,7 @@ inflection = "^0.4.0"
 aiohttp = { version = "*", optional = true }
 requests = { version = "*", optional = true }
 black = { version = "^19.10b0", optional = true }
+schemathesis = "1.1.0"
 
 [tool.poetry.dev-dependencies]
 rich = "^0.8.8"
