--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,8 @@ rich = "^0.8.8"
 requests-toolbelt = "^0.9.1"
 pytest-aiohttp = "^0.3.0"
 pytest-lazy-fixture = "^0.6.3"
+mypy = "^0.782"
+mypy-extensions = "^0.4.3"
 
 [tool.poetry.extras]
 sync = ["requests"]
