--- a/.swagger_codegen.toml
+++ b/.swagger_codegen.toml
@@ -1,10 +1,11 @@
 [swagger_codegen]
 endpoint = "swagger_codegen.parsing.endpoint.EndpointDescription"
-renderer = "swagger_codegen.render.package_renderer.PackageRenderer"
+renderer = "swagger_codegen.render.renderers.package.PackageRenderer"
+#renderer = "swagger_codegen.render.renderers.distributable_package.DistributablePackageRenderer"
 
 [services]
 
 [services.petstore]
-uri = "http://petstore.swagger.io:8080/api/v3/openapi.json"
+uri = "https://petstore3.swagger.io/api/v3/openapi.json"
 directory = "example"
 package = "petstore"
