--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 .idea
 env
 *.egg-info
+todo.txt
 
 # Created by https://www.gitignore.io/api/python,pycharm
 # Edit at https://www.gitignore.io/?templates=python,pycharm
