--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ schemathesis = "1.1.0"
 
 aiohttp = { version = "*", optional = true }
 requests = { version = "*", optional = true }
-httpx = { version = "*", optional = true }
+httpx = { version = "^0.14", optional = true }
 black = { version = "*", allow-prereleases = true, optional = true }
 
 [tool.poetry.dev-dependencies]
