--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,8 @@ pytest-aiohttp = "^0.3.0"
 pytest-lazy-fixture = "^0.6.3"
 mypy = "^0.782"
 mypy-extensions = "^0.4.3"
+fastapi = "^0.63.0"
+uvicorn = "^0.13.2"
 
 [tool.poetry.extras]
 sync = ["requests"]
