--- a/.github/actions/poetry/action.yml
+++ b/.github/actions/poetry/action.yml
@@ -14,14 +14,11 @@ runs:
       shell: bash
     - name: Install Poetry
       run: |
-        curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py -o get-poetry.py
-        python get-poetry.py --version ${{matrix.poetry-version }}
-        source $HOME/.poetry/env
+        pip install -U pip
+        pip install poetry
         poetry config virtualenvs.in-project true
-        rm get-poetry.py
       shell: bash
     - name: Configure Poetry
       run: |
-        source $HOME/.poetry/env
         poetry config virtualenvs.in-project true
       shell: bash
