--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,14 +21,11 @@ toml = "^0.10.0"
 rich = "^0.8.11"
 inflection = "^0.4.0"
 schemathesis = "1.1.0"
+boltons = "^20.2.1"
 
 aiohttp = { version = "*", optional = true }
 requests = { version = "*", optional = true }
 httpx = { version = "^0.14", optional = true }
-black = { version = "*", allow-prereleases = true, optional = true }
-boltons = "^20.2.1"
-isort = { version = "*", optional = true }
-flake8 = { version = "*", optional = true }
 
 [tool.poetry.dev-dependencies]
 rich = "^0.8.8"
@@ -39,12 +36,14 @@ mypy = "^0.782"
 mypy-extensions = "^0.4.3"
 fastapi = "^0.63.0"
 uvicorn = "^0.13.2"
+black = "^20.8b1"
+isort = "^5.7.0"
+flake8 = "^3.8.4"
 
 [tool.poetry.extras]
 sync = ["requests"]
 async = ["aiohttp", "httpx"]
-checks = ["black", "isort", "flake8"]
-all = ["aiohttp", "requests", "httpx", "checks"]
+all = ["aiohttp", "requests", "httpx"]
 
 [tool.poetry.scripts]
 swagger_codegen = 'swagger_codegen.cli.main:app'
