Install black, isort and flake8 for relevant steps

--- a/.github/workflows/continous-integration.yaml
+++ b/.github/workflows/continous-integration.yaml
@@ -34,6 +34,7 @@ jobs:
       - name: Install dependencies with Poetry
         run: |
           poetry install --extras all
+          poetry install isort
 
       - name: Run Isort
         run: |
@@ -64,6 +65,7 @@ jobs:
       - name: Install dependencies with Poetry
         run: |
           poetry install --extras all
+          poetry install flake8
 
       - name: Run Flake8
         run: |
@@ -94,6 +96,7 @@ jobs:
       - name: Install dependencies with Poetry
         run: |
           poetry install --extras all
+          poetry install black
 
       - name: Run Black
         run: |
