add codecov integration
fixes #29

--- a/.github/workflows/continous-integration.yaml
+++ b/.github/workflows/continous-integration.yaml
@@ -128,4 +128,9 @@ jobs:
 
       - name: Run Pytest
         run: |
-          poetry run pytest
+          poetry run pytest --cov=src/swagger_codegen --cov-report=xml
+
+      - name: Report Coverage
+        uses: codecov/codecov-action@v1.2.0
+        with:
+          files: ./coverage.xml
