--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ uvicorn = "^0.13.2"
 black = "^20.8b1"
 isort = "^5.7.0"
 flake8 = "^3.8.4"
+pytest-cov = "^2.10.1"
 
 [tool.poetry.extras]
 sync = ["requests"]
