--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,19 +13,19 @@ keywords = ["swagger-codegen", "openapi", "swagger", "pydantic"]
 [tool.poetry.dependencies]
 python = "^3.8"
 pydantic = "^1.4"
-multidict = "^4.7.5"
+multidict = "^5"
 jinja2 = "^2.11.1"
 click = "^7.1.1"
-typer = "^0.1.1"
+typer = "^0.3"
 toml = "^0.10.0"
 rich = "^0.8.11"
-inflection = "^0.4.0"
+inflection = "^0.5"
 schemathesis = "1.1.0"
 boltons = "^20.2.1"
 
 aiohttp = { version = "*", optional = true }
 requests = { version = "*", optional = true }
-httpx = { version = "^0.14", optional = true }
+httpx = "^0"
 
 [tool.poetry.dev-dependencies]
 rich = "^0.8.8"
