--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,22 +18,20 @@ jinja2 = "^2.11.1"
 click = "^7.1.1"
 typer = "^0.3"
 toml = "^0.10.0"
-rich = "^0.8.11"
 inflection = "^0.5"
 schemathesis = "1.1.0"
 boltons = "^20.2.1"
-
+rich = "^9.6.1"
+httpx = { version = "*", optional = true }
 aiohttp = { version = "*", optional = true }
 requests = { version = "*", optional = true }
-httpx = "^0"
 
 [tool.poetry.dev-dependencies]
-rich = "^0.8.8"
 requests-toolbelt = "^0.9.1"
 pytest-aiohttp = "^0.3.0"
 pytest-lazy-fixture = "^0.6.3"
-mypy = "^0.782"
-mypy-extensions = "^0.4.3"
+mypy = "^0"
+mypy-extensions = "^0"
 fastapi = "^0.63.0"
 uvicorn = "^0.13.2"
 black = "^20.8b1"
